<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/navbar"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_univer"
            android:icon="@drawable/art_track"
            android:title="@string/menu_univer" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/bookmarks"
            android:title="@string/menu_bookmarks" />
        <item
            android:id="@+id/nav_search"
            android:icon="?android:attr/actionModeWebSearchDrawable"
            android:title="@string/menu_search"
            tools:targetApi="lollipop" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/feedback"
            android:title="@string/menu_feedback" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/help"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/us"
                android:title="@string/menu_about" />

        </menu>
    </item>


</menu>
